# Blobbackup

./: .gitattributes  CNAME  MANIFEST.in  Makefile  README.md  build-windows.ps1  index.html  requirements.txt  setup.py
client/: .gitignore  MANIFEST.in  README.md  setup.cfg
client/design/: backupstarteddialog.py  logindialog.py  logindialog.ui  mainwindow.py  mainwindow.ui  restoredialog.py  restoredialog.ui  settingsdialog.py  settingsdialog.ui  welcomedialog.py  welcomedialog.ui
client/package/: blobbackup.spec  fix_qt_for_codesign.py  icon.icns  macos-build-and-package-local.sh  macos-package-app.sh  windows-installer.ifp
client/src/blobbackup/: __main__.py  api.py  application.py  backupstarteddialog.py  backupthread.py  changepassworddialog.py  changepasswordthread.py  choosecomputerdialog.py  config.py  developerdialog.py  heartbeat.py  initializethread.py  loadingdialog.py  logger.py  logindialog.py  loginthread.py  mainwindow.py  prunethread.py  qlazytreewidget.py  requestfulldiskdialog.py  restoredialog.py  restorethread.py  settingsdialog.py  snapshotsthread.py  snapshotthread.py  status.py  statusthread.py  systemtrayicon.py  unlockthread.py  util.py  welcomedialog.py
client/src/blobbackup/misc/: RESTIC_LICENSE.txt  blobbackup-updater.ps1  blobbackup-updater.sh  com.blobbackup.plist  com.blobbackup.updater.plist
client/src/blobbackup/scripts/: buildclient.ps1  buildclient.sh  buildosx.sh  buildrestic.ps1  buildrestic.sh  buildwin.ps1  buildwinupdater.ps1  generateui.ps1  generateui.sh  getrepostats.py
client/src/blobbackup/ui/: developerdialog.py  (+21 more)
(+385 files in other folders)
