[metadata]
name = blobbackup
version = attr: blobbackup._version.__version__

[options]
packages = find:
package_dir =
    =src
include_package_data = true
python_requires = >=3.7
setup_requires =
  pip >= 10
install_requires =
  pyqt5 
  pycryptodome
  keyring
  requests

[options.entry_points]
gui_scripts =
  blobbackup = blobbackup.__main__:main

[options.packages.find]
where=src